# RType

./: .gitignore  CMakeLists.txt  README.md  RFC - LDO - NRM.docx
RType.Assets/Levels/: level1.txt
RType.Common/: CMakeLists.txt  cpp.hint
RType.Common/Headers/: Core.hpp  Helper.hpp  Logger.hpp  RType.Common.hpp
RType.Common/Headers/Components/: Button.hpp  Component.hpp  Drawable.hpp  DynamicButton.hpp  IComponent.hpp  Input.hpp  Monster.hpp  Parallax.hpp  Sprite.hpp  Text.hpp  TextInput.hpp  Transform.hpp
RType.Common/Headers/Entities/: Entity.hpp  IEntity.hpp
RType.Common/Headers/Exceptions/: RTypeException.hpp
RType.Common/Headers/Managers/: GameManager.hpp  Inputs.hpp  SoundManager.hpp
RType.Common/Headers/Models/: RGamePack.pb.cc  RGamePack.pb.h  RGamePack.proto  RTypePack.pb.cc  RTypePack.pb.h  RTypePack.proto
RType.Common/Headers/Network/: Connection.hpp  IPacketManager.hpp  ITCPNetwork.hpp  IUDPNetwork.hpp
RType.Common/Headers/Reloader/: DirectoryWatcher.hpp  Loader.hpp
RType.Common/Headers/Reloader/Interfaces/: IMonster.hpp
RType.Common/Headers/Scenes/: IScene.hpp  Layouts.hpp  Scene.hpp
RType.Common/Headers/Systems/: ButtonSystem.hpp  CollisionSystem.hpp  DrawableSystem.hpp  DynamicButtonSystem.hpp  ISystem.hpp  LoadSystem.hpp  MonsterSystem.hpp  ParallaxSystem.hpp  PlayerSystem.hpp  SpriteSystem.hpp  System.hpp  TextInputSystem.hpp  TextSystem.hpp  TransformSystem.hpp
RType.Common/Headers/Threads/: ITask.hpp  SafeQueue.hpp  ThreadPool.hpp
RType.Common/Sources/: Helper.cpp  Logger.cpp
RType.Common/Sources/Components/: Button.cpp  Component.cpp  Drawable.cpp  DynamicButton.cpp  Input.cpp  Monster.cpp  Parallax.cpp  Sprite.cpp  Text.cpp  TextInput.cpp  Transform.cpp
RType.Common/Sources/Entities/: Entity.cpp
RType.Common/Sources/Managers/: GameManager.cpp  SoundManager.cpp
RType.Common/Sources/Network/: Connection.cpp
RType.Common/Sources/Reloader/: DirectoryWatcher.cpp  Loader.cpp
RType.Common/Sources/Scenes/: Scene.cpp
RType.Common/Sources/Systems/: ButtonSystem.cpp  CollisionSystem.cpp  DrawableSystem.cpp  DynamicButtonSystem.cpp  LoadSystem.cpp  MonsterSystem.cpp  ParallaxSystem.cpp  PlayerSystem.cpp  SpriteSystem.cpp  System.cpp  TextInputSystem.cpp  TextSystem.cpp  TransformSystem.cpp
RType.Common/Sources/Threads/: ThreadPool.cpp
RType.Entities/: CMakeLists.txt
RType.Entities/Headers/: BossMonster.hpp  Bullet.hpp  BulletBoss.hpp  ConeShootingMonster.hpp  DefaultMonster.hpp  DiagonalShootingMonster.hpp  LinearShootingMonster.hpp  RType.Entities.hpp
RType.Entities/Sources/: BossMonster.cpp  Bullet.cpp  BulletBoss.cpp  ConeShootingMonster.cpp  DefaultMonster.cpp  DiagonalShootingMonster.cpp  LinearShootingMonster.cpp
RType.Game/: CMakeLists.txt
RType.Game/Headers/: Application.hpp  PacketManager.hpp  TCPClient.hpp  UDPClient.hpp
RType.Game/Headers/Scenes/: EndScreen.hpp  GameScreen.hpp  JoinLobbyScreen.hpp  LobbyScreen.hpp  MainScreen.hpp  OptionsScreen.hpp
RType.Game/Sources/: Application.cpp  PacketManager.cpp  TCPClient.cpp  UDPClient.cpp  main.cpp
RType.Game/Sources/Scenes/: EndScreen.cpp  GameScreen.cpp  JoinLobbyScreen.cpp  LobbyScreen.cpp  MainScreen.cpp  OptionsScreen.cpp
RType.Server/: CMakeLists.txt
RType.Server/Headers/: GameInstance.hpp  IGameInstance.hpp  Lobby.hpp  PacketManager.hpp  ServApp.hpp  ServerScene.hpp  TCPServer.hpp  UDPServer.hpp
RType.Server/Headers/Parser/: LevelInformation.hpp  Parser.hpp  PowerType.hpp
RType.Server/Sources/: GameInstance.cpp  Lobby.cpp  PacketManager.cpp  ServApp.cpp  ServerScene.cpp  TCPServer.cpp  UDPServer.cpp  main.cpp
RType.Server/Sources/Parser/: Parser.cpp
RType.Tests/: CMakeLists.txt
RType.Tests/Components/: ButtonTests.cpp  DrawableTests.cpp  TextTests.cpp  TransformTests.cpp
RType.Tests/Entities/: EntityTests.cpp
RType.Tests/Monsters/: MonstersTests.cpp
RType.Tests/Systems/: ButtonSystemTests.cpp
docs/: Doxyfile  RType RFC.md
